acoditor initial commit

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,9 @@
-NODE_ENV=development
+SECRET_KEY=9f558f7411776e79fd7c174b
+SQLALCHEMY_TRACK_MODIFICATIONS=False
+#DATABASE_URI=postgresql://ecoditor:ecoditor@localhost:5432/ecoditor
+DATABASE_URI=postgresql://ecoditor:123@pg-db:5432/ecoditor
+DEBUG=False
+ECHO=False
+POSTGRES_USER=ecoditor
+POSTGRES_PASSWORD=123
+POSTGRES_DB=ecoditor  
