--- a/client/package.json
+++ b/client/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "@monaco-editor/react": "^4.6.0",
     "@reduxjs/toolkit": "^2.1.0",
+    "@types/lodash": "^4.14.202",
     "@types/react-modal": "^3.16.3",
     "axios": "^1.6.7",
     "install": "^0.13.0",
+    "lodash": "^4.17.21",
     "npm": "^10.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
